--- a/src/components/calendar/calendar.css
+++ b/src/components/calendar/calendar.css
@@ -71,9 +71,10 @@
 .new-event {
   display: flex;
   justify-content: space-evenly;
-  padding-bottom: 5%;
+  padding-bottom: 20px;
   box-shadow: 0px 0px 15px black;
   transition: 0.25s;
+  height: 25%;
 }
 
 .dark-theme .new-event {
@@ -87,13 +88,20 @@
   border-radius: 5px;
 }
 
+.month h1 {
+  margin-top: 7%;
+}
+
+.add-event h1 {
+  margin-top: 1%;
+}
+
 .light-theme .months {
   background-color: var(--light-theme-background-color);
   border-radius: 5px;
   background-color: rgb(230, 230, 230);
   color: black;
 }
-
 
 .add-event {
   width: 80%;
@@ -150,17 +158,24 @@
   display: none;
 }
 
+.calendar-background {
+  position: fixed;
+  height: 85.3%;
+  width: 90%;
+  z-index: -1;
+}
+
+.dark-theme .calendar-background {
+  background-color: var(--dark-theme-background-color);
+}
+
 .calendar-display {
   display: grid;
   grid-template-columns: calc(100% / 4) calc(100% / 4) calc(100% / 4) calc(100% / 4);
   height: 100%;
   margin-top: 25px;
-  border: 1px solid white;
   transition: 0.25s;
-}
-
-.light-theme .calendar-display {
-  border: 1px solid rgb(190, 190, 190);
+  z-index: 1;
 }
 
 .day {
@@ -189,6 +204,152 @@
   text-align: center;
   padding: 1% 0;
 }
+
+.box {
+  position: fixed;
+  top: 35%;
+  left: 35%;
+  height: 35%;
+  width: 35%;
+  border: 2px solid;
+  box-shadow: 0px 0px 30px black;
+  z-index: 5;
+  background-color: var(--light-theme-background-color);
+}
+
+.box-title {
+  position: absolute;
+  margin: 0;
+  top: 5%;
+  width: 100%;
+  text-align: center;
+}
+
+.dark-theme .box {
+  background-color: var(--dark-theme-background-color);
+}
+
+.exit {
+  position: relative;
+  top: 3%;
+  left: 88.5%;
+  font-size: 100%;
+  height: 10%;
+  width: 10%;
+  color: rgb(173, 35, 35);
+  transition: 0.2s;
+  z-index: 2;
+}
+
+.exit svg {
+  width: 100%;
+  height: 100%;
+}
+
+.exit:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.info {
+  position: relative;
+  width: 75%;
+  top: 30%;
+  left: 12.5%;
+  text-align: center;
+  font-size: 100%;
+  font-weight: bold;
+}
+
+.help-text {
+  margin-top: 15%;
+  height: 60%;
+  font-size: 20px;
+  overflow-y: auto;
+}
+
+.settings-update {
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.change-email form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid;
+  padding: 2%;
+  width: 92%;
+  margin: auto;
+}
+
+.change-email input,
+.change-password input {
+  background-color: rgb(230, 230, 230);
+  padding: 2%;
+  border-radius: 5px;
+}
+
+.change-email button,
+.change-password button {
+  padding: 2%;
+  border-radius: 10px;
+  background-color: var(--default-blue);
+  color: white;
+  border: 0;
+  width: 15%;
+}
+
+.change-email button:hover,
+.change-password button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.change-password form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid;
+  padding: 2%;
+  width: 92%;
+  margin: auto;
+}
+
+.settings {
+  width: 60%;
+  height: 80%;
+  left: 22.5%;
+  top: 10%;
+}
+
+.settings-update {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 80%;
+}
+
+.settings-update div {
+  width: 100%;
+}
+
+.reset {
+  padding: 2.5%;
+  width: 50%;
+  border-radius: 10px;
+  border: 0;
+  background-color: rgb(220, 0, 0);
+  color: white;
+  font-size: 25px;
+}
+
+.reset:hover {
+  opacity: 0.8;
+  cursor: hover;
+}
+
 
 @media screen and (max-width: 1300px) {
   .new-event {
@@ -232,6 +393,52 @@
   .color-input label {
     font-size: 20px;
   }
+}
+
+@media screen and (max-width: 1000px) {
+  .box {
+    width: 50%;
+    left: 30%;
+  }
+
+  .account {
+    left: 25%;
+  }
+
+  .help {
+    width: 75%;
+    left: 15%;
+  }
+
+  .settings {
+    height: 85%;
+  }
+
+  .settings-update {
+    display: flex;
+    height: 85%;
+    justify-content: space-evenly;
+  }
+
+  .change-email form,
+  .change-password form {
+    flex-direction: column;
+    font-size: 25px;
+  }
+
+  .change-email input,
+  .change-password input {
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+  }
+
+  .change-email button,
+  .change-password button {
+    width: 104%;
+    font-size: 25px;
+  }
+
 }
 
 @media screen and (max-width: 800px) {
@@ -345,7 +552,26 @@
     margin: 0;
   }
 
+  .calendar-background {
+    width: 100%;
+  }
+
   .calendar-display {
     grid-template-columns: 100%;
+  }
+
+  .settings {
+    width: 80%;
+    left: 10%;
+  }
+
+  .help {
+    left: 7.5%;
+    width: 85%;
+  }
+
+  .account {
+    width: 85%;
+    left: 7.5%;
   }
 }
